--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,3 +1,3 @@
 {{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
+<WelcomePage />
 {{!-- Feel free to remove this! --}}
